Fixed overlapping text with input in the SASS this time!

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -30,6 +30,8 @@
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  height: 100%;
+  padding-bottom: 50px;
 }
 
 #usernameInput {
@@ -110,7 +112,6 @@
 .page {
   width: 100%;
   height: 100%;
-  position: absolute;
 }
 
 .chatPage {
